@@ -9,6 +9,7 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
   - Fixed returning of 0 rather than NULL in client_connect
   - Updated vusage client API not to try to connect to the daemon if
     vusagec.conf does not exist
+  - Fixed quota calculation bug when delivering with vusage daemon
 
   aledr <matrixworkstation@gmail.com>
   - Patch to secure against possible overflows when reading ezmlm configurations
